<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MAD Sports</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_apply_search">Apply</string>
    <string name="action_select_all">Select All</string>
    <string name="action_add_event">Add Event</string>
    <string name="action_add_event_action">Add Action</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="action_delete_event">Delete Events</string>
    <string name="action_upload_event">Upload Events</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>

    <string name="alert_response_yes">Yes</string>
    <string name="alert_response_no">No</string>
    <string name="alert_response_done">Done</string>
    <string name="alert_response_clear">Any</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- New Event Activity Strings -->
    <string name="label_newevent_title">New Event</string>
    <string name="label_newevent_enterSportType">Sport Type :</string>

    <string-array name="data_newevent_sport_types">
        <item>Football</item>
        <item>Hockey</item>
        <item>Basketball</item>
        <item>Handball</item>
    </string-array>

    <string name="label_newevent_enterDateTime">Date &amp; Start Time :</string>
    <string name="hint_newevent_enterDate">Date</string>
    <string name="hint_newevent_enterTime">Start Time</string>
    <string name="label_newevent_enterHomeTeam">Home Team :</string>
    <string name="label_newevent_enterAwayTeam">Away Team :</string>

    <string-array name="data_newevent_teams">
        <item>Arsenal</item>
        <item>Chelsea</item>
        <item>Manchester City</item>
        <item>Manchester United</item>
    </string-array>

    <string name="label_newevent_enterlocation">Location :</string>

    <string-array name="data_newevent_locations">
        <item>Emirates Stadium</item>
        <item>Stamford Bridge</item>
        <item>Old Traford</item>
        <item>Ethihad Stadium</item>
    </string-array>

    <!-- End : New Event Activity Strings -->

    <string name="title_activity_event_list">EventListActivity</string>


    <!-- Search drawer Strings -->
    <string name="label_drawer_filter_section_title">Filter :</string>
    <string name="label_search_enterSportType"></string>
    <string name="label_drawer_set_dates_title">Happens between (Dates) :</string>
    <string name="label_drawer_set_time_title">Starts After (Time):</string>
    <string name="label_drawer_set_location_title">Location :</string>
    <string name="label_drawer_set_teams_title">Involves (Team) :</string>


</resources>
